--- a/react/index.html
+++ b/react/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ApeaquiIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apeaqui!</title>
+    <title>ERP - Soluções Inteligentes</title>
   </head>
   <body>
     <div id="root"></div>
